welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:4: error: ';' expected but ',' found.
 */Étant donné trois nombres entiers, retournez vrai seulement si un ouplusieurs d'entre eux sont ados.
                                    ^